--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="card">
       <h2>Форма заказа</h2>
-      <input type="text" id="discord" placeholder="Ваш Discord (например: name#0001)" />
+      <input type="text" id="discord" placeholder="Ваш Discord" />
       <input type="text" id="rpmNick" placeholder="Ник на RPM" />
 
       <select id="service">
