--- a/index.html
+++ b/index.html
@@ -1,106 +1,204 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RPM Strip — Услуги Onyx</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #1e0624;
+      color: #e6d6f3;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    h1, h2, h3 {
+      color: #b689f0;
+    }
+    .onyx-image {
+      max-width: 100%;
+      border-radius: 12px;
+    }
+    .card {
+      background-color: #2e0e3b;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(182, 137, 240, 0.3);
+    }
+    button, select, input {
+      background-color: #4d2170;
+      color: #fff;
+      border: none;
+      padding: 10px;
+      border-radius: 6px;
+      margin-top: 10px;
+    }
+    input[type="text"], input[type="datetime-local"] {
+      width: 100%;
+      margin-top: 5px;
+    }
+    .tab {
+      display: none;
+    }
+    nav button {
+      margin-right: 10px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>RPM Strip — Услуги Onyx</h1>
     <img src="img/onyx.jpg" alt="Оникс" class="onyx-image" />
 
-    <div class="card">
+    <nav>
+      <button onclick="showSection('desc')">Описание</button>
+      <button onclick="showSection('price')">Прайс</button>
+      <button onclick="showSection('order')">Оформление заказа</button>
+    </nav>
+
+    <div id="desc" class="card tab">
       <h2>Что на сайте</h2>
-      <p><strong>Сутенёр: someteaze</strong> представляет вашему вниманию первый сайт по стрип-клубу.<br/>
-      По вопросам вы можете связаться со мной:<br/>
-      Дискорд: <code>wsometeazew</code><br/>
-      Телеграм: <code>@crips_someteaze</code></p>
+      <p><strong>Сутенёр: someteaze</strong> представляет первый сайт по стрип-клубу.<br>
+        Связь:<br>
+        Дискорд: <code>wsometeazew</code><br>
+        Телеграм: <code>@crips_someteaze</code></p>
     </div>
 
-    <div class="card">
+    <div id="price" class="card tab">
       <h2>Категории услуг</h2>
-      <button onclick="toggleTab('intim')">Интимные услуги</button>
-      <button onclick="toggleTab('extra')">Дополнительные услуги</button>
+      <button onclick="toggleTab('intim')">Интимные</button>
+      <button onclick="toggleTab('extra')">Дополнительные</button>
 
-      <div id="intim" class="tab" style="display:none">
+      <div id="intim" class="tab">
         <h3>💋 Интимные услуги</h3>
         <ul>
-          <li>Стандарт (1 час) — 40,000$</li>
-          <li>Минет — 25,000$</li>
-          <li>Жёсткое доминирование — 38,000$</li>
-          <li>Подчинение — 80,000$</li>
-          <li>Шибари — 20,000$</li>
-          <li>BDSM — 40,000$</li>
+          <li>Стандарт (1 час) — 40000</li>
+          <li>Минет — 25000</li>
+          <li>Жёсткое доминирование — 38000</li>
+          <li>Подчинение — 80000</li>
+          <li>Шибари — 20000</li>
+          <li>BDSM — 40000</li>
         </ul>
       </div>
 
-      <div id="extra" class="tab" style="display:none">
+      <div id="extra" class="tab">
         <h3>💃 Дополнительные услуги</h3>
         <ul>
-          <li>Стриптиз / Приват-танец — 10,000$</li>
-          <li>Совместная ванна + массаж — 25,000$</li>
-          <li>Ночь со мной — 100,000$</li>
-          <li>Фото-/видеосъёмка + сопровождение — 80,000$</li>
+          <li>Стриптиз / Приват-танец — 10000</li>
+          <li>Совместная ванна + массаж — 25000</li>
+          <li>Ночь со мной — 100000</li>
+          <li>Фото-/видеосъёмка + сопровождение — 80000</li>
         </ul>
       </div>
     </div>
 
-    <div class="card">
+    <div id="order" class="card tab">
       <h2>📝 Оформить заказ</h2>
       <form id="orderForm">
         <label>Ник в Discord:</label>
-        <input type="text" name="discord" required />
+        <input type="text" name="discord" required>
+
         <label>Ник на RPM:</label>
-        <input type="text" name="rpm" required />
+        <input type="text" name="rpm" required>
+
         <label>Выберите услугу:</label>
-        <select name="service">
+        <select name="service" id="service">
           <option value="Стандарт (1 час)">Стандарт (1 час)</option>
           <option value="Минет">Минет</option>
-          <option value="Доминирование">Доминирование</option>
+          <option value="Женское доминирование">Женское доминирование</option>
           <option value="Подчинение">Подчинение</option>
           <option value="Шибари">Шибари</option>
           <option value="BDSM">BDSM</option>
-          <option value="Стриптиз">Стриптиз</option>
-          <option value="Ванна и массаж">Ванна и массаж</option>
-          <option value="Ночь">Ночь</option>
-          <option value="Съёмка">Съёмка</option>
+          <option value="Стриптиз / Приват-танец">Стриптиз / Приват-танец</option>
+          <option value="Совместная ванна + массаж">Совместная ванна + массаж</option>
+          <option value="Ночь со мной">Ночь со мной</option>
+          <option value="Фото-/видеосъёмка + сопровождение">Фото-/видеосъёмка + сопровождение</option>
         </select>
-        <label>Когда:</label>
-        <input type="datetime-local" name="date" required />
-        <button type="submit">Подтвердить заказ</button>
-      </form>
-    </div>
 
-    <div class="card">
-      <h2>⭐ Оценка</h2>
-      <form id="ratingForm">
-        <label>Оцените сервис (1–5):</label>
-        <select name="rating">
-          <option value="5">5</option>
-          <option value="4">4</option>
-          <option value="3">3</option>
-          <option value="2">2</option>
-          <option value="1">1</option>
-        </select>
-        <button type="submit">Оставить оценку</button>
+        <label>Когда:</label>
+        <input type="datetime-local" name="date" required>
+
+        <label>Промокод (если есть):</label>
+        <input type="text" name="promo" id="promo" placeholder="Введите промокод">
+
+        <p id="priceDisplay"></p>
+
+        <button type="submit">Подтвердить заказ</button>
       </form>
     </div>
   </div>
 
   <script>
+    const sections = document.querySelectorAll('.tab');
+    function showSection(id) {
+      sections.forEach(section => section.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
+    }
+    showSection('desc');
+
     function toggleTab(id) {
-      document.querySelectorAll('.tab').forEach(tab => tab.style.display = 'none');
+      document.querySelectorAll('.card .tab').forEach(tab => tab.style.display = 'none');
       document.getElementById(id).style.display = 'block';
     }
 
+    const servicePrices = {
+      "Стандарт (1 час)": 40000,
+      "Минет": 25000,
+      "Жёсткое доминирование": 38000,
+      "Подчинение": 80000,
+      "Шибари": 20000,
+      "BDSM": 40000,
+      "Стриптиз / Приват-танец": 10000,
+      "Совместная ванна + массаж": 25000,
+      "Ночь со мной": 100000,
+      "Фото-/видеосъёмка + сопровождение": 80000
+    };
+
     const orderForm = document.getElementById('orderForm');
+    const serviceSelect = document.getElementById('service');
+    const promoInput = document.getElementById('promo');
+    const priceDisplay = document.getElementById('priceDisplay');
+
+    function updatePrice() {
+      const selectedService = serviceSelect.value;
+      const basePrice = servicePrices[selectedService] || 0;
+      const promo = promoInput.value.trim();
+      let finalPrice = basePrice;
+      let promoText = '';
+
+      if (promo === "ONYX-2025-ELITE-XR") {
+        finalPrice = basePrice * 0.9;
+        promoText = ' (с применением промокода -10%)';
+      }
+
+      priceDisplay.textContent = `Цена: ${finalPrice.toLocaleString()}$` + promoText;
+    }
+
+    serviceSelect.addEventListener('change', updatePrice);
+    promoInput.addEventListener('input', updatePrice);
+
     orderForm.addEventListener('submit', async function (e) {
       e.preventDefault();
-
       const data = new FormData(orderForm);
-      const content = `НОВЫЙ ЗАКАЗ\nDiscord: ${data.get("discord")}\nRPM: ${data.get("rpm")}\nУслуга: ${data.get("service")}\nДата: ${data.get("date")}`;
+
+      const promo = data.get("promo").trim();
+      const service = data.get("service");
+      const basePrice = servicePrices[service] || 0;
+      let finalPrice = basePrice;
+      let discountMsg = '';
+
+      if (promo === "ONYX-2025-ELITE-XR") {
+        finalPrice = Math.floor(basePrice * 0.9);
+        discountMsg = '\n(Промокод применён: -10%)';
+      }
+
+      const content = `НОВЫЙ ЗАКАЗ\nDiscord: ${data.get("discord")}\nRPM: ${data.get("rpm")}\nУслуга: ${service}\nДата: ${data.get("date")}\nЦена: ${finalPrice.toLocaleString()}$${discountMsg}`;
 
       await fetch("https://discord.com/api/webhooks/1377196690099933279/o4XKVX179xTD6IV9FIG-kRg9w_t8XDlBG_xewTh2uRVLJfxvgzUpJtS6rFwOw5eXSID1", {
         method: "POST",
@@ -111,12 +209,7 @@
       alert("Заказ отправлен. Ожидайте подтверждения в Discord.");
     });
 
-    const ratingForm = document.getElementById('ratingForm');
-    ratingForm.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const data = new FormData(ratingForm);
-      alert(`Спасибо за вашу оценку: ${data.get("rating")}/5`);
-    });
+    updatePrice();
   </script>
 </body>
 </html>
