--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <button onclick="showSection('desc')">Описание</button>
       <button onclick="showSection('price')">Прайс</button>
       <button onclick="showSection('order')">Оформление заказа</button>
+      <button onclick="showSection('vip')">VIP Клиент</button>
     </nav>
 
     <div id="desc" class="card tab">
@@ -111,7 +112,7 @@
         <select name="service" id="service">
           <option value="Стандарт (1 час)">Стандарт (1 час)</option>
           <option value="Минет">Минет</option>
-          <option value="Женское доминирование">Женское доминирование</option>
+          <option value="Жёсткое доминирование">Жёсткое доминирование</option>
           <option value="Подчинение">Подчинение</option>
           <option value="Шибари">Шибари</option>
           <option value="BDSM">BDSM</option>
@@ -119,6 +120,7 @@
           <option value="Совместная ванна + массаж">Совместная ванна + массаж</option>
           <option value="Ночь со мной">Ночь со мной</option>
           <option value="Фото-/видеосъёмка + сопровождение">Фото-/видеосъёмка + сопровождение</option>
+          <option value="VIP Клиент">VIP Клиент</option>
         </select>
 
         <label>Когда:</label>
@@ -131,6 +133,20 @@
 
         <button type="submit">Подтвердить заказ</button>
       </form>
+    </div>
+
+    <div id="vip" class="card tab">
+      <h2>👑 VIP Клиент — 200000$</h2>
+      <p>Статус VIP клиента предоставляет следующие преимущества:</p>
+      <ul>
+        <li>Персональный менеджер 24/7</li>
+        <li>Приоритет в обслуживании</li>
+        <li>Скидка 20% на все услуги</li>
+        <li>Эксклюзивный доступ к закрытым шоу</li>
+        <li>Возможность заранее бронировать любую услугу</li>
+        <li>VIP-бейдж в Discord и RPM</li>
+      </ul>
+      <p>Чтобы приобрести статус, оформите заказ с выбором "VIP Клиент" в форме заказа.</p>
     </div>
   </div>
 
@@ -157,7 +173,8 @@
       "Стриптиз / Приват-танец": 10000,
       "Совместная ванна + массаж": 25000,
       "Ночь со мной": 100000,
-      "Фото-/видеосъёмка + сопровождение": 80000
+      "Фото-/видеосъёмка + сопровождение": 80000,
+      "VIP Клиент": 200000
     };
 
     const orderForm = document.getElementById('orderForm');
