--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul>
           <li>Стандарт (1 час) — 40000</li>
           <li>Минет — 25000</li>
-          <li>Жёсткое доминирование — 38000</li>
+          <li>Женское доминирование — 38000</li>
           <li>Подчинение — 80000</li>
           <li>Шибари — 20000</li>
           <li>BDSM — 40000</li>
@@ -112,7 +112,7 @@
         <select name="service" id="service">
           <option value="Стандарт (1 час)">Стандарт (1 час)</option>
           <option value="Минет">Минет</option>
-          <option value="Жёсткое доминирование">Жёсткое доминирование</option>
+          <option value="Женское доминирование">Женское доминирование</option>
           <option value="Подчинение">Подчинение</option>
           <option value="Шибари">Шибари</option>
           <option value="BDSM">BDSM</option>
@@ -136,17 +136,15 @@
     </div>
 
     <div id="vip" class="card tab">
-      <h2>👑 VIP Клиент — 200000$</h2>
+      <h2>👑 VIP Клиент — 200.000$</h2>
       <p>Статус VIP клиента предоставляет следующие преимущества:</p>
       <ul>
         <li>Персональный менеджер 24/7</li>
         <li>Приоритет в обслуживании</li>
-        <li>Скидка 20% на все услуги</li>
-        <li>Эксклюзивный доступ к закрытым шоу</li>
-        <li>Возможность заранее бронировать любую услугу</li>
+        <li>Скидка 10% на все услуги</li>
         <li>VIP-бейдж в Discord и RPM</li>
       </ul>
-      <p>Чтобы приобрести статус, оформите заказ с выбором "VIP Клиент" в форме заказа.</p>
+      <p>Чтобы приобрести статус, оформите заказ с выбором "VIP Клиент" в форме заказа. После вам отпишут в личные сообщения.</p>
     </div>
   </div>
 
