--- a/index.html
+++ b/index.html
@@ -1,230 +1,107 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RPM Strip — Услуги Onyx</title>
-  <style>
-    body {
-      background-color: #1e0624;
-      color: #e6d6f3;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    h1, h2, h3 {
-      color: #b689f0;
-    }
-    .onyx-image {
-      max-width: 100%;
-      border-radius: 12px;
-    }
-    .card {
-      background-color: #2e0e3b;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px rgba(182, 137, 240, 0.3);
-    }
-    button, select, input {
-      background-color: #4d2170;
-      color: #fff;
-      border: none;
-      padding: 10px;
-      border-radius: 6px;
-      margin-top: 10px;
-    }
-    input[type="text"], input[type="datetime-local"] {
-      width: 100%;
-      margin-top: 5px;
-    }
-    .tab {
-      display: none;
-    }
-    nav button {
-      margin-right: 10px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>RPM Strip — Услуги Onyx</h1>
-    <img src="img/onyx.jpg" alt="Оникс" class="onyx-image" />
+<script>
+  const servicePrices = {
+    "Стандарт (1 час)": 40000,
+    "Минет": 25000,
+    "Женское доминирование": 38000,
+    "Подчинение": 80000,
+    "Шибари": 20000,
+    "BDSM": 40000,
+    "Стриптиз / Приват-танец": 10000,
+    "Совместная ванна + массаж": 25000,
+    "Ночь со мной": 100000,
+    "Фото-/видеосъёмка + сопровождение": 80000,
+    "VIP Клиент": 200000
+  };
 
-    <nav>
-      <button onclick="showSection('desc')">Описание</button>
-      <button onclick="showSection('price')">Прайс</button>
-      <button onclick="showSection('order')">Оформление заказа</button>
-      <button onclick="showSection('vip')">VIP Клиент</button>
-    </nav>
+  const orderForm = document.getElementById('orderForm');
+  const serviceSelect = document.getElementById('service');
+  const promoInput = document.getElementById('promo');
+  const priceDisplay = document.getElementById('priceDisplay');
 
-    <div id="desc" class="card tab">
-      <h2>Что на сайте</h2>
-      <p><strong>Сутенёр: someteaze</strong> представляет первый сайт по стрип-клубу.<br>
-        Связь:<br>
-        Дискорд: <code>wsometeazew</code><br>
-        Телеграм: <code>@crips_someteaze</code></p>
-    </div>
+  function updatePrice() {
+    const selectedService = serviceSelect.value;
+    const basePrice = servicePrices[selectedService] || 0;
+    const promo = promoInput.value.trim();
+    let finalPrice = basePrice;
+    let promoText = '';
 
-    <div id="price" class="card tab">
-      <h2>Категории услуг</h2>
-      <button onclick="toggleTab('intim')">Интимные</button>
-      <button onclick="toggleTab('extra')">Дополнительные</button>
-
-      <div id="intim" class="tab">
-        <h3>💋 Интимные услуги</h3>
-        <ul>
-          <li>Стандарт (1 час) — 40000</li>
-          <li>Минет — 25000</li>
-          <li>Женское доминирование — 38000</li>
-          <li>Подчинение — 80000</li>
-          <li>Шибари — 20000</li>
-          <li>BDSM — 40000</li>
-        </ul>
-      </div>
-
-      <div id="extra" class="tab">
-        <h3>💃 Дополнительные услуги</h3>
-        <ul>
-          <li>Стриптиз / Приват-танец — 10000</li>
-          <li>Совместная ванна + массаж — 25000</li>
-          <li>Ночь со мной — 100000</li>
-          <li>Фото-/видеосъёмка + сопровождение — 80000</li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="order" class="card tab">
-      <h2>📝 Оформить заказ</h2>
-      <form id="orderForm">
-        <label>Ник в Discord:</label>
-        <input type="text" name="discord" required>
-
-        <label>Ник на RPM:</label>
-        <input type="text" name="rpm" required>
-
-        <label>Выберите услугу:</label>
-        <select name="service" id="service">
-          <option value="Стандарт (1 час)">Стандарт (1 час)</option>
-          <option value="Минет">Минет</option>
-          <option value="Женское доминирование">Женское доминирование</option>
-          <option value="Подчинение">Подчинение</option>
-          <option value="Шибари">Шибари</option>
-          <option value="BDSM">BDSM</option>
-          <option value="Стриптиз / Приват-танец">Стриптиз / Приват-танец</option>
-          <option value="Совместная ванна + массаж">Совместная ванна + массаж</option>
-          <option value="Ночь со мной">Ночь со мной</option>
-          <option value="Фото-/видеосъёмка + сопровождение">Фото-/видеосъёмка + сопровождение</option>
-          <option value="VIP Клиент">VIP Клиент</option>
-        </select>
-
-        <label>Когда:</label>
-        <input type="datetime-local" name="date" required>
-
-        <label>Промокод (если есть):</label>
-        <input type="text" name="promo" id="promo" placeholder="Введите промокод">
-
-        <p id="priceDisplay"></p>
-
-        <button type="submit">Подтвердить заказ</button>
-      </form>
-    </div>
-
-    <div id="vip" class="card tab">
-      <h2>👑 VIP Клиент — 200.000$</h2>
-      <p>Статус VIP клиента предоставляет следующие преимущества:</p>
-      <ul>
-        <li>Персональный менеджер 24/7</li>
-        <li>Приоритет в обслуживании</li>
-        <li>Скидка 10% на все услуги</li>
-        <li>VIP-бейдж в Discord и RPM</li>
-      </ul>
-      <p>Чтобы приобрести статус, оформите заказ с выбором "VIP Клиент" в форме заказа. После вам отпишут в личные сообщения.</p>
-    </div>
-  </div>
-
-  <script>
-    const sections = document.querySelectorAll('.tab');
-    function showSection(id) {
-      sections.forEach(section => section.style.display = 'none');
-      document.getElementById(id).style.display = 'block';
-    }
-    showSection('desc');
-
-    function toggleTab(id) {
-      document.querySelectorAll('.card .tab').forEach(tab => tab.style.display = 'none');
-      document.getElementById(id).style.display = 'block';
+    if (promo === "ONYX-2025-ELITE-XR") {
+      finalPrice = basePrice * 0.9;
+      promoText = ' (с применением промокода -10%)';
     }
 
-    const servicePrices = {
-      "Стандарт (1 час)": 40000,
-      "Минет": 25000,
-      "Жёсткое доминирование": 38000,
-      "Подчинение": 80000,
-      "Шибари": 20000,
-      "BDSM": 40000,
-      "Стриптиз / Приват-танец": 10000,
-      "Совместная ванна + массаж": 25000,
-      "Ночь со мной": 100000,
-      "Фото-/видеосъёмка + сопровождение": 80000,
-      "VIP Клиент": 200000
-    };
+    priceDisplay.textContent = `Цена: ${finalPrice.toLocaleString()}$` + promoText;
+  }
 
-    const orderForm = document.getElementById('orderForm');
-    const serviceSelect = document.getElementById('service');
-    const promoInput = document.getElementById('promo');
-    const priceDisplay = document.getElementById('priceDisplay');
+  serviceSelect.addEventListener('change', updatePrice);
+  promoInput.addEventListener('input', updatePrice);
 
-    function updatePrice() {
-      const selectedService = serviceSelect.value;
-      const basePrice = servicePrices[selectedService] || 0;
-      const promo = promoInput.value.trim();
-      let finalPrice = basePrice;
-      let promoText = '';
+  orderForm.addEventListener('submit', async function (e) {
+    e.preventDefault();
+    const data = new FormData(orderForm);
 
-      if (promo === "ONYX-2025-ELITE-XR") {
-        finalPrice = basePrice * 0.9;
-        promoText = ' (с применением промокода -10%)';
-      }
+    const promo = data.get("promo").trim();
+    const service = data.get("service");
+    const basePrice = servicePrices[service] || 0;
+    let finalPrice = basePrice;
+    let discountMsg = '';
 
-      priceDisplay.textContent = `Цена: ${finalPrice.toLocaleString()}$` + promoText;
+    if (promo === "ONYX-2025-ELITE-XR") {
+      finalPrice = Math.floor(basePrice * 0.9);
+      discountMsg = '\n💸 Скидка по промокоду';
     }
 
-    serviceSelect.addEventListener('change', updatePrice);
-    promoInput.addEventListener('input', updatePrice);
-
-    orderForm.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const data = new FormData(orderForm);
-
-      const promo = data.get("promo").trim();
-      const service = data.get("service");
-      const basePrice = servicePrices[service] || 0;
-      let finalPrice = basePrice;
-      let discountMsg = '';
-
-      if (promo === "ONYX-2025-ELITE-XR") {
-        finalPrice = Math.floor(basePrice * 0.9);
-        discountMsg = '\n(Промокод применён: -10%)';
-      }
-
-      const content = `НОВЫЙ ЗАКАЗ\nDiscord: ${data.get("discord")}\nRPM: ${data.get("rpm")}\nУслуга: ${service}\nДата: ${data.get("date")}\nЦена: ${finalPrice.toLocaleString()}$${discountMsg}`;
-
-      await fetch("https://discord.com/api/webhooks/1377196690099933279/o4XKVX179xTD6IV9FIG-kRg9w_t8XDlBG_xewTh2uRVLJfxvgzUpJtS6rFwOw5eXSID1", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ content })
-      });
-
-      alert("Заказ отправлен. Ожидайте подтверждения в Discord.");
+    await fetch("https://discord.com/api/webhooks/1377196690099933279/o4XKVX179xTD6IV9FIG-kRg9w_t8XDlBG_xewTh2uRVLJfxvgzUpJtS6rFwOw5eXSID1", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        content: "<@&1371644238349205535>",
+        embeds: [
+          {
+            title: "✨ Новый заказ в RPM Стрип-клубе",
+            color: 0x9b59b6,
+            fields: [
+              {
+                name: "💬 Discord",
+                value: data.get("discord"),
+                inline: true
+              },
+              {
+                name: "🕹️ RPM ник",
+                value: data.get("rpm"),
+                inline: true
+              },
+              {
+                name: "📦 Услуга",
+                value: service,
+                inline: false
+              },
+              {
+                name: "🕒 Время",
+                value: data.get("date"),
+                inline: true
+              },
+              {
+                name: "💰 Цена",
+                value: `${finalPrice.toLocaleString()}$${discountMsg}`,
+                inline: true
+              }
+            ],
+            footer: {
+              text: "RPM Strip Bot • Заказ оформлен",
+              icon_url: "https://i.imgur.com/L6X3S1v.png"
+            },
+            timestamp: new Date().toISOString()
+          }
+        ],
+        allowed_mentions: {
+          roles: ["1371644238349205535"]
+        }
+      })
     });
 
-    updatePrice();
-  </script>
-</body>
-</html>
+    alert("Заказ отправлен. Ожидайте подтверждения в Discord.");
+  });
+
+  updatePrice();
+</script>
