--- a/index.html
+++ b/index.html
@@ -1,107 +1,84 @@
-<script>
-  const servicePrices = {
-    "Стандарт (1 час)": 40000,
-    "Минет": 25000,
-    "Женское доминирование": 38000,
-    "Подчинение": 80000,
-    "Шибари": 20000,
-    "BDSM": 40000,
-    "Стриптиз / Приват-танец": 10000,
-    "Совместная ванна + массаж": 25000,
-    "Ночь со мной": 100000,
-    "Фото-/видеосъёмка + сопровождение": 80000,
-    "VIP Клиент": 200000
-  };
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>RPM Стрип-клуб</title>
+</head>
+<body>
+  <form id="orderForm">
+    <label>Discord: <input name="discord" required></label><br>
+    <label>RPM: <input name="rpm" required></label><br>
+    <label>Услуга:
+      <select name="service" id="service">
+        <option>Минет</option>
+        <option>Стандарт (1 час)</option>
+      </select>
+    </label><br>
+    <label>Дата: <input type="datetime-local" name="date" required></label><br>
+    <label>Промокод: <input type="text" name="promo" id="promo"></label><br>
+    <p id="priceDisplay"></p>
+    <button type="submit">Заказать</button>
+  </form>
 
-  const orderForm = document.getElementById('orderForm');
-  const serviceSelect = document.getElementById('service');
-  const promoInput = document.getElementById('promo');
-  const priceDisplay = document.getElementById('priceDisplay');
+  <script>
+    const servicePrices = {
+      "Стандарт (1 час)": 40000,
+      "Минет": 25000
+    };
 
-  function updatePrice() {
-    const selectedService = serviceSelect.value;
-    const basePrice = servicePrices[selectedService] || 0;
-    const promo = promoInput.value.trim();
-    let finalPrice = basePrice;
-    let promoText = '';
+    const form = document.getElementById('orderForm');
+    const select = document.getElementById('service');
+    const promoInput = document.getElementById('promo');
+    const priceDisplay = document.getElementById('priceDisplay');
 
-    if (promo === "ONYX-2025-ELITE-XR") {
-      finalPrice = basePrice * 0.9;
-      promoText = ' (с применением промокода -10%)';
+    function updatePrice() {
+      const service = select.value;
+      const base = servicePrices[service] || 0;
+      let final = base;
+      let promo = promoInput.value.trim();
+      if (promo === "ONYX-2025-ELITE-XR") {
+        final *= 0.9;
+      }
+      priceDisplay.textContent = `Цена: ${final.toLocaleString()}$`;
     }
 
-    priceDisplay.textContent = `Цена: ${finalPrice.toLocaleString()}$` + promoText;
-  }
+    select.addEventListener('change', updatePrice);
+    promoInput.addEventListener('input', updatePrice);
+    updatePrice();
 
-  serviceSelect.addEventListener('change', updatePrice);
-  promoInput.addEventListener('input', updatePrice);
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      const service = data.get("service");
+      const basePrice = servicePrices[service] || 0;
+      let finalPrice = basePrice;
+      if (data.get("promo").trim() === "ONYX-2025-ELITE-XR") {
+        finalPrice = Math.floor(basePrice * 0.9);
+      }
 
-  orderForm.addEventListener('submit', async function (e) {
-    e.preventDefault();
-    const data = new FormData(orderForm);
+      await fetch("https://discord.com/api/webhooks/your_webhook_url", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          content: "<@&1371644238349205535>",
+          embeds: [
+            {
+              title: "✨ Новый заказ",
+              fields: [
+                { name: "Discord", value: data.get("discord"), inline: true },
+                { name: "RPM", value: data.get("rpm"), inline: true },
+                { name: "Услуга", value: service },
+                { name: "Дата", value: data.get("date"), inline: true },
+                { name: "Цена", value: `${finalPrice.toLocaleString()}$`, inline: true }
+              ]
+            }
+          ],
+          allowed_mentions: { roles: ["1371644238349205535"] }
+        })
+      });
 
-    const promo = data.get("promo").trim();
-    const service = data.get("service");
-    const basePrice = servicePrices[service] || 0;
-    let finalPrice = basePrice;
-    let discountMsg = '';
-
-    if (promo === "ONYX-2025-ELITE-XR") {
-      finalPrice = Math.floor(basePrice * 0.9);
-      discountMsg = '\n💸 Скидка по промокоду';
-    }
-
-    await fetch("https://discord.com/api/webhooks/1377196690099933279/o4XKVX179xTD6IV9FIG-kRg9w_t8XDlBG_xewTh2uRVLJfxvgzUpJtS6rFwOw5eXSID1", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        content: "<@&1371644238349205535>",
-        embeds: [
-          {
-            title: "✨ Новый заказ в RPM Стрип-клубе",
-            color: 0x9b59b6,
-            fields: [
-              {
-                name: "💬 Discord",
-                value: data.get("discord"),
-                inline: true
-              },
-              {
-                name: "🕹️ RPM ник",
-                value: data.get("rpm"),
-                inline: true
-              },
-              {
-                name: "📦 Услуга",
-                value: service,
-                inline: false
-              },
-              {
-                name: "🕒 Время",
-                value: data.get("date"),
-                inline: true
-              },
-              {
-                name: "💰 Цена",
-                value: `${finalPrice.toLocaleString()}$${discountMsg}`,
-                inline: true
-              }
-            ],
-            footer: {
-              text: "RPM Strip Bot • Заказ оформлен",
-              icon_url: "https://i.imgur.com/L6X3S1v.png"
-            },
-            timestamp: new Date().toISOString()
-          }
-        ],
-        allowed_mentions: {
-          roles: ["1371644238349205535"]
-        }
-      })
+      alert("Отправлено!");
     });
-
-    alert("Заказ отправлен. Ожидайте подтверждения в Discord.");
-  });
-
-  updatePrice();
-</script>
+  </script>
+</body>
+</html>
