--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
       <div id="intim" class="tab">
         <h3>💋 Интимные услуги</h3>
         <ul>
-          <li>Стандарт (1 час) — 40000</li>
-          <li>Минет — 25000</li>
-          <li>Женское доминирование — 38000</li>
-          <li>Подчинение — 80000</li>
-          <li>Шибари — 20000</li>
-          <li>BDSM — 40000</li>
+          <li>Стандарт (1 час) — 40.000$</li>
+          <li>Минет — 25.000$</li>
+          <li>Женское доминирование — 38.000$</li>
+          <li>Подчинение — 80.000$</li>
+          <li>Шибари — 20.000$</li>
+          <li>BDSM — 40.000$</li>
         </ul>
       </div>
 
       <div id="extra" class="tab">
         <h3>💃 Дополнительные услуги</h3>
         <ul>
-          <li>Стриптиз / Приват-танец — 10000</li>
-          <li>Совместная ванна + массаж — 25000</li>
-          <li>Ночь со мной — 100000</li>
-          <li>Фото-/видеосъёмка + сопровождение — 80000</li>
+          <li>Стриптиз / Приват-танец — 10.000$</li>
+          <li>Совместная ванна + массаж — 25.000$</li>
+          <li>Ночь со мной — 100.000$</li>
+          <li>Фото-/видеосъёмка + сопровождение — 80.000$</li>
         </ul>
       </div>
     </div>
